--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.109.2
 uvicorn[standard]==0.27.1
-sqlalchemy==2.0.25
-alembic==1.13.1
-psycopg2-binary==2.9.9
+sqlalchemy==2.0.32
+alembic==1.13.2
+psycopg[binary]==3.2.1
 redis==5.0.1
 pydantic==2.6.1
 pydantic-settings==2.1.0
