--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -7,5 +7,6 @@ redis==5.0.1
 pydantic==2.6.1
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
+qrcode[pil]==7.4.2
 python-multipart==0.0.9
 httpx==0.26.0
