🔧 Major fixes and improvements
✅ Fixed TypeScript compilation errors in admin panel
✅ Simplified clipboard functionality to show links in alerts
✅ Fixed vote endpoint to handle JSON parsing manually
✅ Extended token lifetime to 24 hours
✅ Added Event model and management endpoints
✅ Improved admin panel with dynamic event loading
✅ Fixed UUID generation for events
✅ Enhanced error handling and debugging
✅ Cleaned up build issues and dependencies

- Admin panel now properly manages events and battles
- Voting system handles JSON parsing correctly
- Token expiration extended for better user experience
- Clipboard functionality simplified and more reliable
- All TypeScript errors resolved

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - NEXT_PUBLIC_API_BASE=http://localhost:8000
     depends_on:
       api:
