--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -49,4 +49,4 @@ EXPOSE 3000
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
-CMD ["node", "./node_modules/.bin/next", "start"]
+CMD ["sh", "-c", "node_modules/.bin/next start"]
